# tap-boilerplate

./: cookiecutter.json
{{cookiecutter.project_name}}/: .gitattributes  .gitignore  pyproject.toml  setup.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: client.py  runner.py  utils.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/streams/: __init__.py  base.py
